Make getCurrentlyRunningAppId always use game overlay process
In f91e1a32eb01e49e6eace0c5bb20a3747461c284, we started using the game
overlay process in every OS. This removes the (now pointless) checking
of the file based registry and just scans processes by default now.